syntax = "proto3";

option go_package = "v1";
option java_package = "io.stackrox.proto.api.v1";

import weak "google/api/annotations.proto";
import "api/v1/empty.proto";
import "storage/event.proto";

package v1;

message GetEventsResponse {
    repeated storage.Event events = 1;
}

service EventService {

    rpc GetEvents (Empty) returns (GetEventsResponse) {
        option(google.api.http) = {
            get: "/v1/events"
        };
    }
}
